# tape

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md
src/: CMakeLists.txt  backward.cc  fluid  function.cc  function.h  optimizer.cc  optimizer.h  parameter.cc  parameter.h  tape.cc  tape.h  test_backward.cc  test_parameter.cc  test_tape.cc  variable.cc  variable.h
src/data/: create_recordio.py
src/example/: CMakeLists.txt
src/example/cifar/: CMakeLists.txt  create_cifar_recordio.py  fluid_cifar_benchmark.py  test_cifar.cc
src/example/gan/: CMakeLists.txt  test_gan.cc
src/example/machine_translation/: CMakeLists.txt  create_wmt14_recordio.py  test_machine_translation.cc
src/example/mnist/: CMakeLists.txt  create_mnist_recordio.py  test_mnist.cc
tape/: CMakeLists.txt  tape.cc  variable.cc
